--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="MultiRT.cpp" />
     <ClCompile Include="Object3d.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PostEffect.cpp" />
@@ -197,6 +198,7 @@
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="MultiRT.h" />
     <ClInclude Include="Object3d.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PostEffect.h" />
