--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="MultiRT.cpp" />
     <ClCompile Include="MultiTex.cpp" />
     <ClCompile Include="Object3d.cpp" />
@@ -212,6 +213,7 @@
     <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="Mouse.h" />
     <ClInclude Include="MultiRT.h" />
     <ClInclude Include="MultiTex.h" />
     <ClInclude Include="Object3d.h" />
