--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -177,13 +177,13 @@
     <ClCompile Include="Code\win\WinApp.cpp">
       <Filter>ソースファイル\win</Filter>
     </ClCompile>
-    <ClCompile Include="Rope.cpp">
-      <Filter>ソースファイル\game</Filter>
-    </ClCompile>
     <ClCompile Include="TitleScene.cpp">
       <Filter>ソースファイル\game</Filter>
     </ClCompile>
     <ClCompile Include="EndScene.cpp">
+      <Filter>ソースファイル\game</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\game\Rope.cpp">
       <Filter>ソースファイル\game</Filter>
     </ClCompile>
   </ItemGroup>
@@ -293,13 +293,13 @@
     <ClInclude Include="Code\win\WinApp.h">
       <Filter>ヘッダーファイル\win</Filter>
     </ClInclude>
-    <ClInclude Include="Rope.h">
-      <Filter>ヘッダーファイル\game</Filter>
-    </ClInclude>
     <ClInclude Include="TitleScene.h">
       <Filter>ヘッダーファイル\game</Filter>
     </ClInclude>
     <ClInclude Include="EndScene.h">
+      <Filter>ヘッダーファイル\game</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\game\Rope.h">
       <Filter>ヘッダーファイル\game</Filter>
     </ClInclude>
   </ItemGroup>
