--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -189,6 +189,9 @@
     <ClCompile Include="Code\game\Bullet.cpp">
       <Filter>ソースファイル\game</Filter>
     </ClCompile>
+    <ClCompile Include="Code\game\Item.cpp">
+      <Filter>ソースファイル\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h">
@@ -306,6 +309,9 @@
       <Filter>ヘッダーファイル\game</Filter>
     </ClInclude>
     <ClInclude Include="Code\game\Bullet.h">
+      <Filter>ヘッダーファイル\game</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\game\Item.h">
       <Filter>ヘッダーファイル\game</Filter>
     </ClInclude>
   </ItemGroup>
